      - Adding IE mixed mode toggle
      - Grid Hub now launches from JSON file (hub_4444.json)
      - Improved OS detection on Windows for first run, this solves issue between Windows/Vista/XP/Win8
      - [BUG] Set timeout to 5 seconds when pulling node config from the central hub, instead of sitting there indefinetely
      - [BJG[ Fix /ps endpoint
1.5.2 - Make the Grid Extras compatible with Java 1.6
1.5.1 - [BUG] Firefox on windows was not getting terminated with /kill_firefox command
1.5.0 - Automatically record video of a running test
      - Daily rolling logs for grid extras
      - Adding /kill_safari end point to kill instance of Safari Browser
      - Fixing the /kill_firefox endpoint, it was broken for some reason
1.4.0 - Modifying system timeouts, such as browser idle timeout, new session timeout, and grid status checking timeouts
      - When launching grid, use absolute path to java not just "java" alias which might not be declared in the PATH if you are using a Daemon (Non Windows OS only)
1.3.3 - Fixed an issue where the node will attempt to reboot and will be stuck in an endless loop trying to kill safari and never rebooting. Fixing the issue by commenting out the kill browsers command and just sending a reboot command
1.3.2 - Fixing a bug where node config JSON have all Integers converted to Doubles by Gson, which prevents nodes from starting
1.3.1 - When sending config to HUB and reciving it from HUB, parse the config and pretty print it into the file
      - Performance improvment in the tests, don't try to ping hub asking for local box's info when in test mode
1.3.0 - Nodes store all of the configs on the HUB and update from the HUB everytime they are started
      - Switching to Semantic Versioning
      - Adding ability to reboot grid node after a certain session limit has been reached.
      - Removed log4j from the proxy, it seems to bottleneck requests
      - Update the new session timeout setting to be 2 minutes instead of infinite